[package]
name = "create_pipelines"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_json = "1"
ambient_pipeline_types = { path = "../../ambient/crates/pipeline_types" }
toml = "0.7"
